# contiker

./: Cargo.toml  README.md  go.mod  go.sum  main.go  makefile
contiker-docker/: Cargo.toml
contiker-docker/src/: constants.rs  lib.rs
contiker-init/: Cargo.toml
contiker-init/src/: lib.rs
contiker-wsl/: Cargo.toml
contiker-wsl-distro/: .gitignore  Dockerfile  generate.ps1  generate.sh  launch.ps1  oobe.sh  wsl-distribution.conf  wsl.conf
contiker-wsl/src/: constants.rs  gh_release.rs  lib.rs
pkg/command-context/: common.go  default.go  docker.go
pkg/commander/: commander.go
pkg/pkgmanager/: archlinux.go  archlinux_test.go  macos.go  manager.go  ubuntu.go  utils.go  windows.go
src/: linux.rs  main.rs  windows.rs
